Ft- passwordReset
added the password reset feature
